--- a/app/src/main/res/layout/fragment_food_data.xml
+++ b/app/src/main/res/layout/fragment_food_data.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
@@ -18,40 +17,34 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nutreons"
+            android:text="@string/nutreons"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
-        <View
-            android:layout_height="2dip"
-            android:background="#FF909090" />
-
         <TableRow>
-
             <TextView
                 android:layout_column="1"
                 android:padding="3dip"
-                android:text="Energy(kcal)"
+                android:text="@string/energy_kcal"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
             <TextView
-                android:gravity="right"
+                android:gravity="end"
                 android:padding="3dip"
-                android:text="55"
+                android:text="@{`` +viewModel.energyKcal}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
         </TableRow>
 
         <TableRow>
-
             <TextView
                 android:layout_column="1"
                 android:padding="3dip"
-                android:text="Energy (kJ)"
+                android:text="@string/energy_kj"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
             <TextView
-                android:gravity="right"
+                android:gravity="end"
                 android:padding="3dip"
-                android:text="230"
+                android:text="@{`` +viewModel.energyKJ}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
         </TableRow>
 
@@ -60,32 +53,30 @@
             android:background="#FF909090" />
 
         <TableRow>
-
             <TextView
                 android:layout_column="1"
                 android:padding="3dip"
-                android:text="Fat"
+                android:text="@string/fat"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
             <TextView
-                android:gravity="right"
+                android:gravity="end"
                 android:padding="3dip"
-                android:text="0.3g"
+                android:text="@{`` +viewModel.fat}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
         </TableRow>
 
         <TableRow>
-
             <TextView
                 android:layout_column="1"
                 android:padding="3dip"
-                android:text="of which saturates"
+                android:text="@string/of_which_saturates"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
             <TextView
-                android:gravity="right"
+                android:gravity="end"
                 android:padding="3dip"
-                android:text="0mg"
+                android:text="@{`` +viewModel.saturates}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
         </TableRow>
 
@@ -102,48 +93,13 @@
             <TextView
                 android:layout_column="1"
                 android:padding="3dip"
-                android:text="Protein"
+                android:text="@string/protein"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
             <TextView
-                android:gravity="right"
+                android:gravity="end"
                 android:padding="3dip"
-                android:text="0.5g"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-        </TableRow>
-
-        <View
-            android:layout_height="2dip"
-            android:background="#FF909090" />
-
-
-        <TableRow>
-
-            <TextView
-                android:layout_column="1"
-                android:padding="3dip"
-                android:text="Carbohydrates"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-            <TextView
-                android:gravity="right"
-                android:padding="3dip"
-                android:text="13.8g"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-        </TableRow>
-
-        <TableRow>
-
-            <TextView
-                android:layout_column="1"
-                android:padding="3dip"
-                android:text="of which sugars"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-            <TextView
-                android:gravity="right"
-                android:padding="3dip"
-                android:text="12.5g"
+                android:text="@{`` +viewModel.protein}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
         </TableRow>
 
@@ -152,17 +108,49 @@
             android:background="#FF909090" />
 
         <TableRow>
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="@string/carbohydrates"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="end"
+                android:padding="3dip"
+                android:text="@{`` +viewModel.carbohydrates}"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <TableRow>
 
             <TextView
                 android:layout_column="1"
                 android:padding="3dip"
-                android:text="Salt"
+                android:text="@string/of_which_sugars"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
             <TextView
-                android:gravity="right"
+                android:gravity="end"
                 android:padding="3dip"
-                android:text="0g"
+                android:text="@{`` +viewModel.sugar}"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
+
+        <TableRow>
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="@string/salt"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="end"
+                android:padding="3dip"
+                android:text="@{`` +viewModel.salt}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
         </TableRow>
 
