--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#0277bd</color>
     <color name="colorPrimaryDark">#004c8c</color>
     <color name="colorAccent">#42a5f5</color>
+    <color name="colorSecondary">#0277bd</color>
 
     <color name="black_semi_transparent">#B2000000</color>
     <color name="background">#B2000000</color>
