--- a/app/src/main/res/menu/add_food_menu.xml
+++ b/app/src/main/res/menu/add_food_menu.xml
@@ -5,6 +5,6 @@
 <item
     android:id="@+id/save_food"
     android:icon="@drawable/ic_save_white_24dp"
-    android:title="Save"
+    android:title="@string/save"
     app:showAsAction="ifRoom" />
 </menu>
