--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -29,7 +29,12 @@
         android:id="@+id/main_activity_me_fragment"
         android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.MeFragment"
         android:label="fragment_me"
-        tools:layout="@layout/fragment_me" />
+        tools:layout="@layout/fragment_me" >
+        <action
+            android:id="@+id/action_main_activity_me_fragment_to_editMeActivity"
+            app:destination="@id/editMeActivity"
+            app:enterAnim="@anim/nav_default_enter_anim" />
+    </fragment>
     <fragment
         android:id="@+id/main_activity_graphs_fragment"
         android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.GraphsFragment"
@@ -49,5 +54,10 @@
             android:name="foodId"
             app:argType="integer" />
     </activity>
+    <activity
+        android:id="@+id/editMeActivity"
+        android:name="hochschule.de.bachelorthesis.view.activities.EditMeActivity"
+        android:label="activity_edit_me"
+        tools:layout="@layout/activity_edit_me" />
 
 </navigation>
